<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teensy_loader_cli</name>
  <version>0.0.2</version>
  <description>Tools to flash teensy boards</description>
  <maintainer email="victor.lopez@keybotic.com">victor</maintainer>
  <license>GPL3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>
  <depend>libusb-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
